# aiogram-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  glama.json  pyproject.toml  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
aiogram_mcp/: __init__.py  __main__.py  audit.py  context.py  events.py  middleware.py  models.py  permissions.py  prompts.py  rate_limiter.py  resources.py  server.py  utils.py
aiogram_mcp/tools/: __init__.py  broadcast.py  chats.py  events.py  interactive.py  media.py  messaging.py  users.py
docs/plans/: 2026-03-07-mcp-resources-design.md
examples/: basic_bot.py  incident_alert_bot.py
tests/: test_core.py
