[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiogram-mcp"
version = "0.2.0"
description = "MCP server middleware for aiogram Telegram bots — expose your bot to AI agents via the Model Context Protocol"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Py2755" }]
keywords = [
    "telegram",
    "aiogram",
    "mcp",
    "model-context-protocol",
    "bot",
    "ai",
    "claude",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiogram>=3.20.0",
    "fastmcp>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Py2755/aiogram-mcp"
Repository = "https://github.com/Py2755/aiogram-mcp"
Issues = "https://github.com/Py2755/aiogram-mcp/issues"
Changelog = "https://github.com/Py2755/aiogram-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aiogram_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
